--- a/Sopra.Labs.ConsoleApp4/Sopra.Labs.ConsoleApp4.csproj
+++ b/Sopra.Labs.ConsoleApp4/Sopra.Labs.ConsoleApp4.csproj
@@ -5,8 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+	</ItemGroup>
 
 </Project>
